--- a/Raneev_K_Credit_Card_Default_Prediction_ML2_Capstone_Project.ipynb
+++ b/Raneev_K_Credit_Card_Default_Prediction_ML2_Capstone_Project.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Raneevk/Credit-Card-Default-Prediction-capstone-project/blob/main/Raneev_K_Credit_Card_Default_Prediction_ML2_Capstone_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "tOGC-qoyhJeX"
       },
       "source": [
@@ -8483,7 +8493,8 @@
     "colab": {
       "collapsed_sections": [],
       "name": "Raneev K Credit Card Default Prediction ML2 Capstone Project.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
